SpeculativeJIT::compileGetEnumerableLength should not use GPRFlushedCallResult https://bugs.webkit.org/show_bug.cgi?id=220557

Reviewed by Yusuke Suzuki.

It wasn't used as the result from a call, so we're overly restricting the
register we allocate for no good reason.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileGetEnumerableLength):


Canonical link: https://commits.webkit.org/233043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271490 268f45cc-cd09-0410-ab3c-d52691b4dbfc